# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "kst"
version = "1.3.0"
description = "Kandji Sync Toolkit, a utility for local management of Kandji resources (Deprecated, use iructl)."
dependencies = [
    "iructl ~= 1.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["kandji", "kandji-sync-toolkit", "iructl"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/kandji-inc/kst"
Repository = "https://github.com/kandji-inc/kst.git"
"Bug Tracker" = "https://github.com/kandji-inc/iructl/issues"

[project.scripts]
kst = "kst._wrapper:main"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "only-managed"

[tool.hatch.build.targets.sdist]
include = [
    "pyproject.toml",
    "src/kst",
    "LICENSE",
    "README.md",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
# Importing the deprecated kst package in tests is expected
filterwarnings = [
    "ignore:the kst package is deprecated:DeprecationWarning",
]
